# agent-drive

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: 01_human_agent_handover.py  02_azure_ad_auth.py  03_azure_provider.py
src/agent_drive/: __init__.py  auth.py  core.py
src/agent_drive/providers/: __init__.py  azure.py  azure_blob.py  azure_files.py  local.py  mounted.py
